alterações para release

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 APP_ENV                 = local
 APP_DEBUG               = true
 APP_KEY                 = wqGeTSTB2sdsafgf324tyhgbvertghdz
+APP_KEY_SESSION         = app.session
 
 APP_LOCALE              = pt_BR
 APP_FALLBACK_LOCALE     = pt_BR
@@ -12,8 +13,10 @@ DB_DATABASE             = homestead
 DB_USERNAME             = homestead
 DB_PASSWORD             = secret
 
+AUTH_MODEL              = Igorwanbarros\Autenticacao\Models\User
+
 CACHE_DRIVER            = file
-SESSION_DRIVER          = cookie
+SESSION_DRIVER          = file
 QUEUE_DRIVER            = sync
 
 # MAIL_DRIVER           = smtp
