--- a/composer.json
+++ b/composer.json
@@ -32,5 +32,7 @@
     },
     "config": {
         "preferred-install": "dist"
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
