--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,14 @@
     "scripts": {
         "post-root-package-install": [
             "php -r \"copy('.env.example', '.env');\""
+        ],
+	"post-install-cmd": [
+            "php artisan vendor:publish",
+            "php artisan autenticacao:acl"
+        ],
+        "post-update-cmd": [
+            "php artisan vendor:publish",
+            "php artisan autenticacao:acl"
         ]
     }
 }
