adicionando diretiva no arquivo .env.example (APP_TEMPLATE_USE) e adicionando command no arquivo composer (migrate)

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ APP_ENV                 = local
 APP_DEBUG               = true
 APP_KEY                 = wqGeTSTB2sdsafgf324tyhgbvertghdz
 APP_KEY_SESSION         = app.session
+APP_TEMPLATE_USE        = admin-lte
 
 APP_LOCALE              = pt_BR
 APP_FALLBACK_LOCALE     = pt_BR
